--- a/src/app/Components/BackOffice/dashboard/dashboard-components/feeds/feeds.component.html
+++ b/src/app/Components/BackOffice/dashboard/dashboard-components/feeds/feeds.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Feeds</h4>
+        <h4 class="card-title">statistics
+        </h4>
         <h5 class="card-subtitle">Widget you can use</h5>
         <div class="feed-widget mt-4">
             <ul class="list-unstyled feed-body m-0">
