--- a/src/app/Shared/profile/profile.component.html
+++ b/src/app/Shared/profile/profile.component.html
@@ -82,9 +82,15 @@
                 <p><strong>Destination:</strong> {{ parcel.parcelDestination }}</p>
                 <p><strong>Weight:</strong> {{ parcel.parcelWeight }} kg</p>
                 <p><strong>Price:</strong> DT{{ parcel.parcelPrice }}</p>
+                <p><strong>Status:</strong> {{ parcel.status }}</p>
               </div>
-              <button (click)="deleteParcel(parcel.parcelId)" class="cancel-parcel-btn">Cancel Parcel</button>
-            </div>
+              <button 
+        [disabled]="parcel.status === 'SHIPPED'" 
+        [ngClass]="{'disabled-btn': parcel.status === 'SHIPPED'}"
+        (click)="deleteParcel(parcel.parcelId)" 
+        class="cancel-parcel-btn">
+        Cancel Parcel
+      </button>           </div>
           </div>
       
  <!-- Carpool History Section -->
