--- a/src/app/Components/BackOffice/vehicle/vehicle-edit/vehicle-edit.component.html
+++ b/src/app/Components/BackOffice/vehicle/vehicle-edit/vehicle-edit.component.html
@@ -1,7 +1,7 @@
 <div class="form-container">
   <div class="header">
     <h1>Edit Vehicle</h1>
-    <button class="secondary-button" (click)="cancel()">
+    <button class="back-button" (click)="cancel()">
       <i class="fas fa-arrow-left"></i> Back to List
     </button>
   </div>
