--- a/src/app/Components/FrontOffice/subscription/subscription-creation/subscription-creation.component.html
+++ b/src/app/Components/FrontOffice/subscription/subscription-creation/subscription-creation.component.html
@@ -10,6 +10,8 @@
       
       <div class="card-body">
         <p>{{ offer.subscriptionDescription }}</p>
+        <!-- Subscription Duration -->
+        <p class="duration"><strong>Duration:</strong> {{ offer.durationInMonths }} months</p>
       </div>
       
       <div class="card-footer">
