--- a/src/app/Components/FrontOffice/subscription/subscription-creation/subscription-creation.component.css
+++ b/src/app/Components/FrontOffice/subscription/subscription-creation/subscription-creation.component.css
@@ -205,3 +205,12 @@
     margin-bottom: 30px;
   }
 }
+
+/* Subscription Duration */
+.duration {
+  font-size: 1.1em;
+  color: #555; /* Darker gray */
+  margin-top: 10px;
+  font-weight: 600;
+}
+
