--- a/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
+++ b/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
@@ -21,6 +21,25 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <h5 class="card-subtitle">Parcel Revenue Report for the Year</h5>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <!-- column -->
+            <div class="col-lg-12">
+                <div>
+                    <div class="d-flex flex-column w-100">
+                        <apx-chart [series]="salesChartOptions.series" [chart]="salesChartOptions.chart"
+                            [xaxis]="salesChartOptions.xaxis" [yaxis]="salesChartOptions.yaxis"
+                            [grid]="salesChartOptions.grid" [stroke]="salesChartOptions.stroke"
+                            [tooltip]="salesChartOptions.tooltip" [dataLabels]="salesChartOptions.dataLabels"
+                            [legend]="salesChartOptions.legend" [colors]="salesChartOptions.colors"
+                            [markers]="salesChartOptions.markers">
+                        </apx-chart>
+                    </div>
+                </div>
+            </div>
             <!-- column -->
         </div>
     </div>
